# V2

./: .gitignore  training_pipeline.py
analyse/AI Infra/AIv5/: .env.example  =0.15.0  ARCHITECTURE_DIAGRAM.md  ATTENTION_ENSEMBLE_README.md  CLAUDE.md  DECISION_FLOW.md  EBP_VISUAL_GUIDE.md  FEATURE_IMPORTANCE_REPORT.md  IMPLEMENTATION_SUMMARY.md  MAMBA_ATTENTION_README.md  PERFORMANCE_REPORT_20251104.md  PHASE1_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  STATUS.md  analyze_feature_importance.py  analyze_snapshot_evaluation.py  analyze_walk_forward_results.py  attention_xgboost_ensemble.py  build_ticker_universe.py  check_sequences.py  combine_and_train_massive.py  comprehensive_validation.py  debug_dates.py  debug_feature_extraction.py  debug_ticker_cache.py  detect_patterns_batch.py  detect_patterns_gcs_massive.py  download_expanded_gcs_data.py  download_gcs_tickers_direct.py  download_historical_data.py  extract_features_historical_enhanced.py  extract_features_improved.py  feature_engineering_v3.py  feature_importance_tracker.py  final_validation_report.py  generate_validation_report_canonical.py  generate_validation_report_mamba.py  main.py  (+19 more)
analyse/AI Infra/AIv5/config/: foreman_config.py
analyse/AI Infra/AIv5/data_acquisition/services/: modern_foreman.py
analyse/AI Infra/AIv5/data_acquisition/sources/: api_key_manager.py  async_adapter.py  foreman_service.py  storage_manager.py  yfinance_downloader.py
analyse/AI Infra/AIv5/docs/: ACTION_PLAN_FEATURE_FIXES.md  BBW_FIX_VERIFICATION.md  CONSOLIDATION_CRITERIA_FIX_SUMMARY.md  MODEL_IMPROVEMENT_REPORT.md  PROJECT_COMPLETE.md  README.md  TRAINING_VALIDATION_COMPARISON_20251103.md  VALIDATION_REPORT_BBW_FIX_20251103.md
analyse/AI Infra/AIv5/pattern_detection/: __init__.py
analyse/AI Infra/AIv5/pattern_detection/adapters/: __init__.py  pattern_adapter.py
analyse/AI Infra/AIv5/pattern_detection/features/: canonical_feature_extractor.py  ebp_features_incremental.py
analyse/AI Infra/AIv5/pattern_detection/models/: __init__.py  pattern.py
analyse/AI Infra/AIv5/pattern_detection/protocols/: __init__.py  detector.py
analyse/AI Infra/AIv5/pattern_detection/services/: scan_service.py
analyse/AI Infra/AIv5/shared/: __init__.py
analyse/AI Infra/AIv5/tests/: conftest.py  test_canonical_feature_extractor.py
analyse/AI Infra/AIv5/training/: __init__.py
(+1419 files in other folders)
